Fix selected styling on small & tall seg components

--- a/adcolony/less/adcolony-custom.less
+++ b/adcolony/less/adcolony-custom.less
@@ -2056,6 +2056,12 @@ ul.ac-compact-list {
   .selected &-component {
     .active-component;
   }
+  .selected &-component-small {
+    .active-component;
+  }
+  .selected &-component-tall {
+    .active-component;
+  }
   //END
 
 
